# CPPR

./: .gitignore  README.md
CPPR/: CMakeLists.txt  library.cpp  main.cpp
CPPR/include/: cppr.hpp  library.h  type_info.hpp
CPPR/src/: cppr.cpp  cppr_tests.cpp  descriptors.cpp  serialization.cpp  type_declaration.cpp  type_decleration.cpp  type_info.cpp  type_resolver.cpp
DOCS/: Howitworks.md  Howtouse.md
Source/: CMakeLists.txt  main.cpp
Source/include/: cppr.hpp  descriptors.hpp  test.hpp  type_declaration.hpp
Source/src/: descriptors.cpp  serialization.cpp  type_info.cpp  type_resolver.cpp
include/: cppr.hpp  serialization.hpp
